# masterstone-mac-app

./: README.md  crm.html  migrate.py  package.json  schema.sql
.github/workflows/: build.yml
dist 2/: crm.html
src-tauri/: Cargo.toml  lib.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
