[package]
name = "masterstone"
version = "0.1.0"
description = "Masterstone CRM — Native macOS app"
authors = ["Masterstone LLP"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "masterstone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
pdf-extract = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
