[package]
name = "masterstone"
version = "0.1.0"
description = "Masterstone CRM — Native macOS app"
authors = ["Masterstone LLP"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "masterstone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
# Phase 8BD — reqwest for the FX fetch command (Tauri WebView can't make
# CORS-restricted browser fetches to free FX APIs; Rust-side HTTP bypasses
# that). rustls-tls is the pure-Rust TLS implementation — avoids needing
# system OpenSSL on the build machine (matters for macOS CI runner).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
